--- a/TrainingCurriculum/TrainingCurriculum.csproj
+++ b/TrainingCurriculum/TrainingCurriculum.csproj
@@ -138,7 +138,6 @@
     <Compile Include="group.cs">
       <DependentUpon>TrainingModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\TestData.cs" />
     <Compile Include="phase.cs">
       <DependentUpon>TrainingModel.tt</DependentUpon>
     </Compile>
@@ -232,6 +231,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
